--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   "dependencies": {
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-sigma": "=1.2.15"
+    "react-sigma": "=1.2.17",
+    "react-simple-file-input": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-	"deploy": "npm run build&&gh-pages -d build"
-
+    "deploy": "npm run build&&gh-pages -d build"
   }
 }
