Added color attribute to the network

--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-    "name": "case-law-app-js",
-    "version": "0.1.0",
-    "private": true,
-    "homepage": "https://nlesc.github.io/case-law-app",
-    "devDependencies": {
-        "gh-pages": "^0.12.0",
-        "react-scripts": "0.8.5"
-    },
-    "dependencies": {
-        "react": "^15.4.2",
-        "react-dom": "^15.4.2",
-        "react-sigma": "=1.2.17",
-        "react-simple-file-input": "^1.0.0"
-    },
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test --env=jsdom",
-        "eject": "react-scripts eject",
-        "deploy": "npm run build&&gh-pages -d build"
-    }
+  "name": "case-law-app-js",
+  "version": "0.1.0",
+  "private": true,
+  "homepage": "https://nlesc.github.io/case-law-app",
+  "devDependencies": {
+    "gh-pages": "^0.12.0",
+    "react-scripts": "0.8.5"
+  },
+  "dependencies": {
+    "colormap": "^2.2.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-sigma": "=1.2.17",
+    "react-simple-file-input": "^1.0.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "deploy": "npm run build&&gh-pages -d build"
+  }
 }
