--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "homepage": "https://nlesc.github.io/case-law-app",
   "devDependencies": {
+    "enzyme": "^2.7.1",
     "gh-pages": "^0.12.0",
+    "react-addons-test-utils": "^15.4.2",
+    "react-dom": "^15.4.2",
     "react-scripts": "0.8.5"
   },
   "dependencies": {
