--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "babyparse": "^0.4.6",
     "colormap": "2.2.0",
+    "rc-slider": "^8.1.5",
     "react": "15.4.2",
     "react-dom": "15.4.2",
     "react-select": "^1.0.0-rc.5",
